--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import Button from '@components/ui/Button.astro';
 
 const ctaButton = {
     name: 'تواصل معنا',
-    link: '/contact',
+    link: '/#contact',
 };
  
 // Get the current path to determine active menu item
