--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,12 @@ import image4 from '../content/blog/images/noor-riyadh.jpg';
 
 
 
-const seoTitle = "الحشود الذكية";
+const seoTitle = "حشود 
+ذكية";
 const seoDescription = 'شركة متخصصة في إدارة الحشود وتنظيم حركة الأفراد في المواقع العامة والفعاليات الكبرى';
 
 const heroContent = {
-    title: 'الحشود الذكية',
+    title: 'حشود ذكية',
     description: 'شركة متخصصة في تنظيم وتوجيه حركة الأفراد في المواقع العامة أو الفعاليات الكبرى بطريقة تضمن السلامة والراحة لجميع الحاضرين',
 
     backgroundImage: heroImage,
